--- a/src/components/posts.css
+++ b/src/components/posts.css
@@ -1,22 +1,20 @@
 
-.heading{
-  background-color: rgb(0, 145, 255);
+.main-div h1{
+  background-color: rgb(209, 231, 248);
   text-align: center;
-}
-.heading h1{
+  margin:0px;
 }
 .dashboard {
     display: flex;
     flex-direction: row;
     align-items:center;
     margin: 0 2%;
-    padding-top: 2%;
+    padding-top: 5%;
     height: 70vh; /* Adjust height as needed */
   }
 .main-div{
-    /* background-color: brown;
-   
-    backface-visibility: hidden; */
-    background: rgba(200, 54, 54, 0.5);
+    background: rgba(238, 173, 173, 0.5);
     height: 100vh;
+    margin: 0px;
+    /* padding-top: 20%; */
   }
